--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chenglong.muscle"
-    android:versionCode="3"
-    android:versionName="2.1" >
+    android:versionCode="6"
+    android:versionName="2.2.1" >
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -25,6 +25,9 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
+    <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT"/>
+
 
     <application
         android:name=".main.MyApplication"
@@ -41,14 +44,14 @@
   
         <activity
             android:name=".main.SplashActivity"
-            android:theme="@android:style/Theme.Translucent"
-            android:label="@string/app_name" >
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.WelcomeActivity" android:theme="@style/MyTheme"/>
+        <activity android:name=".main.WelcomeActivity"/>
         <activity android:name=".main.MainActivity" />
         <activity android:name=".body.MuscleListActivity" />
         <activity android:name=".tool.MapActivity" />
